# simple-elt

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/: actions.py  backend.py  cli.py  datasets.py  files.py
