[tool.poetry]
name = "simple-elt"
version = "0.1.0"
description = "Script to load local data into databases"
authors = ["Alex Mitchell <alexjfmitchell@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
SQLAlchemy = "^2.0.11"
psycopg2 = "^2.9.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
